top-nav spacing fixes in mobile

--- a/assets/styles/04-components/user-menu.scss
+++ b/assets/styles/04-components/user-menu.scss
@@ -9,7 +9,7 @@
 }
 
 .dropdown-toggler {
-  @apply inline-flex items-center lg:h-full w-10 mx-1 md:mx-2 text-gray-500 absolute top-[-47px] end-0 lg:static;
+  @apply inline-flex items-center lg:h-full w-10 mx-0 lg:mx-2 text-gray-500 absolute top-[-47px] end-0 lg:static;
 
   &:before {
     content: "";
